@@ -18,6 +18,7 @@
             <label index="look_up">Look up</label>
             <label index="show_all">Show all</label>
             <label index="displaying_results">Results %1$d-%2$d of %3$d</label>
+			<label index="all_domains">-- All domains --</label>
         </languageKey>
     </data>
 </T3locallang>
